<resources>
    <string name="app_name" translatable="false">TechMerch</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="forgot_password_description">Обратитесь к администратору системы</string>
    <string name="no_server_connection">Нет подключения</string>
    <string name="no_server_connection_description">Без доступа к серверу - проверьте подключение к интернету</string>
    <string name="fill_field">Заполните поле</string>
    <string name="fill_time_interval">Заполните временной промежуток</string>
    <string name="time_interval_negative">Вторая дата должна быть позже первой</string>
    <string name="time_interval_too_big">Временной интервал больше месяца</string>
    <string name="time_interval_time_walker">Заполнение отчета наперед?</string>
    <string name="time_interval_non_actual">Временной интервал слишком далёк от текущего дня</string>
    <string name="report_empty">Отчет не может быть пустым</string>
    <string name="report_send">Отчет отправлен</string>
    <string name="wrong_data_log_in">Неправильный логин или пароль</string>
    <string name="error">Ошибка</string>
    <string name="error_destination">Нельзя выбрать тот же адрес, на котором вы находитесь</string>
    <string name="error_certification">Ошибка: проверьте работоспособность Play Market и перезапустите приложение</string>
    <string name="request_is_loading">Выберите заявку</string>
    <string name="supplies_are_loading">Проверяем поставки…</string>
    <string name="are_supplies_ok">Соответствуют ли поставки действительности?</string>
    <string name="server_error">Ошибка подключения к серверу</string>
    <string name="uploading_data_error">Ошибка при отправке данных</string>
    <string name="downloading_images_data_error">Ошибка при скачивании фото</string>
    <string name="actual_data_search_error">Ошибка при поиске актуальных данных</string>
    <string name="no_warehouse_error">Ошибка: склад из заявки не найден</string>
    <string name="photo_limit_error">Максимальное количество фото: 5</string>
    <string name="no_write_permission_error">Ошибка: приложению нужен доступ к файловой системе</string>
    <string name="not_all_photos_error">Синхронизация завершена. Но не все фото были получены</string>
    <string name="sync_ended_errors">Синхронизация завершена. Но с некоторыми ошибками</string>
    <string name="executor_error">Введите исполнителя</string>
    <string name="no_executor_error">Для заявки нет ни одного подходящего человека</string>
    <string name="success">Успех</string>
    <string name="rejected">Отклонено</string>
    <string name="request_success">Заявка создана</string>
    <string name="request_has_send">Заявка отправлена</string>
    <string name="request_created_not_sended">Заявка сохранена, но не отправлена</string>
    <string name="note_success">Заметка создана</string>
    <string name="note">Заметка</string>
    <string name="note_delete_warning">Удалить заявку может только автор</string>
    <string name="note_deleting">Удаление заметки</string>
    <string name="note_deleting_desc">Вы действительно хотите удалить заметку?</string>
    <string name="request_waiting_status">Ожидающие моего ответа</string>
    <string name="request_advancing_status">Продвигающиеся заявки</string>
    <string name="request_finished_status">Завершившиеся заявки</string>
    <string name="request_waiting_status_short">Ожидающие</string>
    <string name="request_advancing_status_short">В работе</string>
    <string name="request_finished_status_short">Законченные</string>
    <string name="request_acception">Подтверждение заявки</string>
    <string name="request_completion">Выполнение заявки</string>
    <string name="request_hand_over">Передать заявку</string>
    <string name="request_saved">Заявка сохранена</string>
    <string name="request_status">Статус заявки</string>
    <string name="requests_statuses">Статусы заявок</string>
    <string name="requests_statuses_sale_point">Статусы заявок на точке</string>
    <string name="no_requests">Нет заявок</string>
    <string name="title">Заголовок</string>
    <string name="text_example">Пример текста, заполнение блока случайным набором букв</string>
    <string name="long_text_example">Пример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором буквПример текста, заполнение блока случайным набором букв</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="ok">Ок</string>
    <string name="from">От</string>
    <string name="from_">c</string>
    <string name="to">по</string>
    <string name="on">на</string>
    <string name="appointed_on">Сейчас назначено на</string>
    <string name="completing">Выполняет</string>
    <string name="cancel">Отмена</string>
    <string name="change">Изменить</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="reject">Отклонить</string>
    <string name="approve">Одобрить</string>
    <string name="pass">Передать</string>
    <string name="perform">Выполнить</string>
    <string name="delete">Удалить</string>
    <string name="reshoot">Переснять</string>
    <string name="get_started">Приступить к выполнению</string>
    <string name="short_example">Короткий текст</string>
    <string name="start_work">Начать работу</string>
    <string name="start_work_description">Выполнение ежедневных операций с торговыми точками</string>
    <string name="synchronization">Синхронизация</string>
    <string name="synchronization_description">Обмен данными с центральным сервером</string>
    <string name="last_sync">Последняя синхронизация</string>
    <string name="sync_success">Синхронизация прошла успешно</string>
    <string name="finished">Завершено</string>
    <string name="sync_server_connection">Ошибка: не удалось связаться с сервером</string>
    <string name="sync_server_error">Ошибка при синхронизации. Повторите попытку</string>
    <string name="server_timeout">Ошибка: запрос на сервер занял слишком много времени</string>
    <string name="no_data">Нет данных</string>
    <string name="no_data_do_sync">Нет данных. Рекомендуется пройти синхронизацию</string>
    <string name="settings">Настройки</string>
    <string name="sync">Синхронизация</string>
    <string name="settings_description">Просмотр IMEI / Обновление приложения</string>
    <string name="bottom_text_example">1775 | 3.0.5 | 65212565256525652 | 20.02.2022</string>
    <string name="back">Назад</string>
    <string name="device_id">Идентификатор устройства</string>
    <string name="device_id_example">65212565256525652</string>
    <string name="change_password">Сменить пароль аккаунта</string>
    <string name="password_changing">Смена пароля</string>
    <string name="password_old">Старый пароль</string>
    <string name="password_new">Новый пароль</string>
    <string name="password_new_repeat">Повторите новый пароль</string>
    <string name="password_no_equal">Пароли не совпадают</string>
    <string name="password_wrong">Неверный пароль</string>
    <string name="password_success">Пароль успешно изменен</string>
    <string name="app_language">Язык приложения</string>
    <string name="switching_language">Смена языка</string>
    <string name="ru_language">Русский</string>
    <string name="kz_language">Казахский</string>
    <string name="app_language_description">русский / казахский</string>
    <string name="server">Сервер</string>
    <string name="server_description">Сменить подключение на тестовый сервер</string>
    <string name="start_work_check_point">Начало работы:</string>
    <string name="search_outlet">Поиск торговой точки</string>
    <string name="search_outlet_description">Выбрать любую торговую точку для посещения</string>
    <string name="daily_countdown">Дневной отсчет</string>
    <string name="daily_countdown_description">Просмотр отчетов по совершенным действиям</string>
    <string name="statuses">Статус заявок</string>
    <string name="statuses_description">Просмотр моих заявок с разбивкой по статусам</string>
    <string name="report_description">Заполнение ежемесячного отчета по расходным материалам</string>
    <string name="operations">Операции</string>
    <string name="outlets">Торговые точки</string>
    <string name="new_sale_point">Новая Торговая точка</string>
    <string name="outlet_information">Информация ТТ</string>
    <string name="trms_requests">Заявки от TMR\'а</string>
    <string name="finish_work">Завершить работу</string>
    <string name="finishing_work">Завершение работы</string>
    <string name="finishing_work_question">Вы хотите завершить работу на текущий день?</string>
    <string name="search_outlet_hint">Код, название, адрес, владелец</string>
    <string name="search_warehouse_hint">Оборудование, имя склада, улица</string>
    <string name="search">Поиск</string>
    <string name="address">Адрес</string>
    <string name="enter_address">Укажите адрес</string>
    <string name="destination">Местоназначение</string>
    <string name="request_quantity">Заявок</string>
    <string name="request">Заявка</string>
    <string name="code">Код</string>
    <string name="requests_on_outlet">Заявок на точке</string>
    <string name="notes_on_outlet_info">Заметок на точке</string>
    <string name="entity">Юридическое лицо</string>
    <string name="category">Категория</string>
    <string name="sales_channel">Канал продаж</string>
    <string name="outlet_type">Тип ТТ</string>
    <string name="phone">Телефон</string>
    <string name="comment_to_outlet">Комментарий к ТТ:</string>
    <string name="show_route">Показать маршрут</string>
    <string name="sale_point_on_map">Местоположение точки</string>
    <string name="km_from_you">км от вас</string>
    <string name="start_work_outlet">Начать работу на точке</string>
    <string name="repeat">Повторить</string>
    <string name="operations_on_outlet">Операции на торговой точке</string>
    <string name="notes_on_outlet">Заметки на торговой точке</string>
    <string name="your_current_outlet">Ваша текущая точка:</string>
    <string name="detail_information">Детальная информация</string>
    <string name="create_request">Создать заявку</string>
    <string name="create_note">Создать заметку</string>
    <string name="choose_from">Выбрать из перечисленных</string>
    <string name="input_executor_name">Впишите имя исполнителя</string>
    <string name="request_comment">Комментарий заявки</string>
    <string name="choose_work_types">Выберите типы работ</string>
    <string name="repair">Ремонт</string>
    <string name="replace">Перемещение</string>
    <string name="additional_work">Дополнительная работа</string>
    <string name="fill_fields">Заполните поля</string>
    <string name="executor">Исполнитель</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="send">Отправить</string>
    <string name="enter_manually">Ввести наименование вручную</string>
    <string name="consumable">Расходный материал</string>
    <string name="cost_and_quantity">Стоимость и количество материала</string>
    <string name="cost">Стоимость</string>
    <string name="quantity">Количество</string>
    <string name="full_cost">Общая стоимость</string>
</resources>