<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OperationsFragment"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:layout_marginTop="87sp"
    android:paddingHorizontal="6sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_fields"
        android:fontFamily="@font/bandera_pro_bold"
        android:textSize="20sp"
        android:layout_marginTop="46sp"
        android:layout_marginBottom="29sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/executor"
        android:textSize="16sp"
        android:fontFamily="@font/bandera_pro_medium"
        android:layout_marginBottom="9sp"/>

    <AutoCompleteTextView
        android:id="@+id/executor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="80sp"
        android:fontFamily="@font/bandera_pro"
        android:textSize="16sp"
        android:hint="@string/input_executor_name"
        android:textColorHint="@color/light_purple"
        android:background="@drawable/background_edit_text"
        android:inputType="textMultiLine"
        android:completionThreshold="1"
        android:elevation="3sp"
        android:layout_marginBottom="18sp"
        android:padding="10sp"
        tools:targetApi="lollipop" />

<!--    android:focusable="false"-->
<!--    android:cursorVisible="false"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_comment"
        android:textSize="16sp"
        android:fontFamily="@font/bandera_pro_medium"
        android:layout_marginBottom="9sp"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="85sp"
        android:maxHeight="200sp"
        android:fontFamily="@font/bandera_pro"
        android:textSize="16sp"
        android:hint="@string/request_comment"
        android:textColorHint="@color/light_purple"
        android:background="@drawable/background_edit_text"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:elevation="3sp"
        android:layout_marginBottom="18sp"
        android:padding="10sp"
        tools:targetApi="lollipop" />

</LinearLayout>