<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="7sp">
        <TextView
            android:id="@+id/dateUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_example"
            android:fontFamily="@font/bandera_pro_medium"
            android:textSize="12sp"
            android:layout_marginBottom="8sp"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/request_status"
            android:textColor="@color/dark_gold"
            android:fontFamily="@font/bandera_pro"
            android:textSize="12sp"
            android:layout_marginBottom="2sp"/>

        <TextView
            android:id="@+id/fromUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/from"
            android:fontFamily="@font/bandera_pro"
            android:textSize="12sp"
            android:layout_marginBottom="2sp"/>

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/text_example"
            android:fontFamily="@font/bandera_pro"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <View
        android:id="@+id/line"
        style="@style/line"
        android:layout_marginHorizontal="2sp"
        android:layout_marginVertical="14sp"/>

</LinearLayout>