<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="50sp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/lavender"
        app:cardCornerRadius="3sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingVertical="24sp"
            android:paddingHorizontal="19sp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/main_deep_purple"
                android:fontFamily="@font/bandera_pro_medium"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example"
                android:textColor="@color/main_deep_purple"
                android:textSize="12sp"
                android:fontFamily="@font/bandera_pro"
                android:layout_marginVertical="19sp"
                android:textAlignment="center"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/twoVariants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/negative"
                        style="@style/button"
                        android:layout_weight="1"
                        android:text="@string/no"
                        android:background="@drawable/button_neutral"
                        android:layout_marginEnd="12sp"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/positive"
                        style="@style/button"
                        android:layout_weight="1"
                        android:text="@string/yes"
                        android:background="@drawable/button_dark"
                        android:textColor="@color/white"
                        android:layout_marginStart="12sp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ok"
                    style="@style/button"
                    android:text="@string/ok"
                    android:background="@drawable/button_dark"
                    android:textColor="@color/white"
                    android:visibility="visible"/>
            </RelativeLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>